# lib_lvgl

./: .gitignore  .gitmodules  README.md  README.rst  ctags_read.py
examples/app_benchmark_demo_lpddr/: CMakeLists.txt  README.md
examples/app_benchmark_demo_lpddr/src/: fast_flash.h  fast_flash.xc  flash_server.h  lv_conf.h  main.c
examples/app_cubic_bezier_spi_task/: CMakeLists.txt  README.md
examples/app_cubic_bezier_spi_task/src/: lv_conf.h  main.c
examples/app_music_demo_swmem/: .gitignore  CMakeLists.txt  README.md
examples/app_music_demo_swmem/src/: flash_server.c  lv_conf.h  main.c
examples/app_stress_demo/: CMakeLists.txt  README.md  basic.xscope
examples/app_stress_demo/src/: lv_conf.h  main.c
examples/app_table_demo/: CMakeLists.txt
examples/app_table_demo/src/: CST816S.c  CST816S.h  ST7789.c  ST7789.h  lv_conf.h  main.c
examples/app_widgets_demo_swmem/: CMakeLists.txt  README.md
examples/app_widgets_demo_swmem/src/: fast_flash_read_loop.S  lv_conf.h  main.c  multitile.xc
lib_lvgl/: lib_build_info.cmake
lib_lvgl/api/: CST816S.h  ST7789.h  lvgl_task.h  spi_task.h
lib_lvgl/src/: CST816S.c  ST7789.c  lvgl_task.c  spi_task.c
lib_lvgl/submodules/: lvgl_xmos.patch
